syntax = "proto3";
package pb;

option go_package = ".;pb";

import "google/protobuf/empty.proto";
import "google/api/annotation.proto";
import "include/graphql.proto";


service HelloWorldService {
    // gRPC service information
    // gRPC service information
    option (graphql.service) = {
       host: "localhost:8080"
       insecure: true
      };

    rpc HelloWorld(Hello) returns (google.protobuf.Empty){
        option (google.api.http) = {
           post: "/v1/hello-world/hello"
           body: "*"
          };
        option (graphql.schema) = {
             type: QUERY   // decleare as query
             name: "hello" // query name
            };
    };

}

message Hello {
    string message = 1;
}
